Rename to flutter_spine

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -5,7 +5,7 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^0.1.2
-  spine_flutter:
+  flutter_spine:
     path: ../
 
 dev_dependencies:
