--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,6 +1,11 @@
 name: example
 description: A new Flutter project.
 
+version: 1.0.0+1
+
+environment:
+  sdk: ">=2.7.0 <3.0.0"
+
 dependencies:
   flutter:
     sdk: flutter
