--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,13 @@
 name: flutter_spine
 description: The flutter_spine runtime provides functionality to load and manipulate Spine skeletal animation data using Flutter.
-version: 0.1.0
+version: 0.2.0
 homepage: https://github.com/Yesterday17/flutter_spine
 author: Junji Takakura <j.takakura@gmail.com>
+
+environment:
+  #sdk: ">=2.0.0-dev.51.0 <3.0.0"
+  flutter: '>=2.8.1 <3.0.0'
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
@@ -12,6 +17,3 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-environment:
-  sdk: ">=2.0.0-dev.51.0 <3.0.0"
