--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -3,8 +3,11 @@ description: A new Flutter project.
 
 version: 1.0.0+1
 
+publish_to: none
+
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  flutter: '>=2.8.1 <3.0.0'
+  sdk: '>=2.15.1 <3.0.0'
 
 dependencies:
   flutter:
