--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,17 +1,25 @@
+# author Junji Takakura <j.takakura@gmail.com>
+
 name: flutter_spine
 description: The flutter_spine runtime provides functionality to load and manipulate Spine skeletal animation data using Flutter.
 version: 0.2.0
 homepage: https://github.com/Yesterday17/flutter_spine
-author: Junji Takakura <j.takakura@gmail.com>
+
+publish_to: 'none'
 
 environment:
   flutter: '>=2.8.1 <3.0.0'
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=2.15.1 <3.0.0'
 
 dependencies:
+  fimber: ^0.6.4
   flutter:
     sdk: flutter
-  spine_core: ^0.2.0
+
+  #spine_core: ^0.2.0
+  spine_core:
+    git: https://github.com/signmotion/spine_core.git
+    #path: ../spine_core
 
 dev_dependencies:
   flutter_test:
