--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -23,6 +23,7 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
+    - assets/cauldron/
     - assets/raccoon/
     - assets/raptor/
     - assets/spineboy/
