Added example `girl_and_whale`.

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -24,6 +24,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/cauldron/
+    - assets/girl_and_whale/
     - assets/raccoon/
     - assets/raptor/
     - assets/spineboy/
