Revert "Rename to flutter_spine"
This reverts commit 9a2a4bcd7a64b023630746377a4250633de7ddf8.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,9 @@
 # author Junji Takakura <j.takakura@gmail.com>
 
-name: flutter_spine
-description: The flutter_spine runtime provides functionality to load and manipulate Spine skeletal animation data using Flutter.
-version: 0.3.0
-homepage: https://github.com/Yesterday17/flutter_spine
+name: spine_flutter
+description: The spine-flutter runtime provides functionality to load and manipulate Spine skeletal animation data using Flutter.
+version: 0.1.0
+homepage: https://github.com/jtakakura/spine_flutter/
 
 publish_to: 'none'
 
