Added `owl`. Thanks http://esotericsoftware.com/spine-examples-owl

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -26,5 +26,6 @@ flutter:
     - assets/cauldron/
     - assets/girl_and_whale_polygons/
     - assets/girl_and_whale_rectangles/
+    - assets/owl/
     - assets/raptor/
     - assets/spineboy/
