--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,8 +6,8 @@ version: 0.1.0
 homepage: https://github.com/jtakakura/spine_flutter/
 
 environment:
-  sdk: '>=2.15.1 <3.0.0'
-  flutter: '>=2.8.1'
+  flutter: '>=2.10.0 <3.0.0'
+  sdk: '>=2.16.0 <3.0.0'
 
 dependencies:
   flutter:
