--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -2,9 +2,9 @@ name: Flutter
 
 on:
   push:
-    branches: [master]
+    branches: [main]
   pull_request:
-    branches: [master]
+    branches: [main]
   schedule:
     - cron: "0 7 * * 0"
 
