Added example `lamb`. Need a fix animation.

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -27,6 +27,7 @@ flutter:
     - assets/cauldron/
     - assets/girl_and_whale_polygons/
     - assets/girl_and_whale_rectangles/
+    - assets/lamb/
     - assets/owl/
     - assets/raptor/
     - assets/spineboy/
