--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -6,7 +6,7 @@ version: 1.0.0+1
 publish_to: none
 
 environment:
-  flutter: '>=2.10.0 <3.0.0'
+  flutter: '>=2.10.0'
   sdk: '>=2.16.0 <3.0.0'
 
 dependencies:
