--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ version: 0.1.1
 homepage: https://github.com/jtakakura/spine_flutter/
 
 environment:
-  flutter: '>=2.10.0 <3.0.0'
+  flutter: '>=2.10.0'
   sdk: '>=2.16.0 <3.0.0'
 
 dependencies:
