Update .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,7 @@ ios/.generated/
 ios/Flutter/Generated.xcconfig
 ios/Runner/GeneratedPluginRegistrant.*
 
+android/gradlew
+android/gradlew.bat
+
 /*.lock
