--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -6,18 +6,18 @@ version: 1.0.0+1
 publish_to: none
 
 environment:
-  flutter: '>=2.10.0 <3.0.0'
-  sdk: '>=2.16.0 <3.0.0'
+  sdk: '>=2.17.3 <3.0.0'
+  flutter: '>=3.0.2 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.4
+  cupertino_icons: ^1.0.5
   spine_flutter:
     path: ../
 
 dev_dependencies:
-  flutter_lints: ^1.0.4
+  flutter_lints: ^2.0.1
   flutter_test:
     sdk: flutter
 
@@ -27,6 +27,11 @@ flutter:
     - assets/cauldron/
     - assets/girl_and_whale_polygons/
     - assets/girl_and_whale_rectangles/
+    - assets/lamb/
+    - assets/lamb_2022_02_23/
     - assets/owl/
     - assets/raptor/
     - assets/spineboy/
+    - assets/separate_off/
+    - assets/separate_off_tc/
+    - assets/separate-on/
