--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -25,13 +25,9 @@ flutter:
   uses-material-design: true
   assets:
     - assets/cauldron/
+    - assets/fox/
     - assets/girl_and_whale_polygons/
     - assets/girl_and_whale_rectangles/
-    - assets/lamb/
-    - assets/lamb_2022_02_23/
     - assets/owl/
     - assets/raptor/
     - assets/spineboy/
-    - assets/separate_off/
-    - assets/separate_off_tc/
-    - assets/separate-on/
