--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -6,7 +6,7 @@ version: 1.0.0+1
 publish_to: none
 
 environment:
-  flutter: '>=3.0.2 <4.0.0'
+  flutter: '>=3.0.2'
   sdk: '>=2.17.0 <3.0.0'
 
 dependencies:
