--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ version: 0.1.2
 homepage: https://github.com/jtakakura/spine_flutter/
 
 environment:
-  flutter: '>=3.0.2 <4.0.0'
+  flutter: '>=3.0.2'
   sdk: '>=2.17.0 <3.0.0'
 
 dependencies:
