--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 # author Junji Takakura <j.takakura@gmail.com>
 
-name: spine_flutter
+name: spine_flutter_dart
 description: The spine-flutter runtime provides functionality to load and manipulate Spine skeletal animation data using Flutter.
 version: 0.1.3
 homepage: https://github.com/jtakakura/spine_flutter/
